# BABAPPA

./: .gitignore  BABAPPA_PUBLICATION_FINAL_TOUCH_2026-02-26.txt  BABAPPA_REALDATA_STATUS_2026-02-26.txt  BABAPPA_all_reports_consolidated.txt  BABAPPA_all_results_consolidated.txt  BABAPPA_full_phase_execution_status.txt  BABAPPA_live_execution_status.txt  BABAPPA_publishable_status_report.txt  README.md  REVIEW_RESPONSE.md  REVISION_EXPERIMENT_PLAN.md  pyproject.toml  run.sh  sanity.sh
baselines/: run_busted.sh  run_busted_singularity.sh  run_codeml.sh  run_codeml_singularity.sh  run_relax.sh  run_relax_singularity.sh
baselines/docker/: Dockerfile.codeml  Dockerfile.hyphy  README.md
benchmark/: plots.py
docs/: benchmarking.md  biologist_quickstart.md  interpretation.md  model_spec.md
schemas/: analysis_manifest.schema.json  benchmark_manifest.schema.json  dataset.schema.json  energy.schema.json  neutral_model.schema.json  phi.schema.json  training_manifest.schema.json
scripts/: run_ci.sh
src/babappa/: __init__.py  _plotting_env.py  audit_ortholog.py  baseline.py  baseline_adapters.py  benchmark_pack.py  benchmark_pack_cli.py  cli.py  codon.py  dataset_fetch.py  dataset_real.py  doctor.py  engine.py  evaluation.py  explain.py  hash_utils.py  (+13 more)
tests/: test_audit_ortholog.py  test_baseline_adapters.py  test_benchmark_orchestrator.py  test_calibration_uniformity_smoke.py  test_cli.py  test_determinism.py  test_energy_grad_laplace.py  test_engine.py  test_evaluation.py  test_io.py  test_manifest_schema.py  test_phylo.py  test_stats.py  test_validation_battery.py
(+5 files in other folders)
