[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babappa"
version = "1.0.0"
description = "BABAPPA engine for distributed evolutionary burden analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Krishnendu Sinha" }
]
keywords = [
  "evolutionary biology",
  "bioinformatics",
  "sequence analysis",
  "selection",
  "statistics"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7"
]

[project.scripts]
babappa = "babappa.cli:main"

[project.urls]
Homepage = "https://github.com/sinhakrishnendu/babappa"
Repository = "https://github.com/sinhakrishnendu/babappa"
Issues = "https://github.com/sinhakrishnendu/babappa/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
